@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022, 2023 Obeo.
+ * Copyright (c) 2022, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -22,7 +22,7 @@ export interface ToolbarActionProps {
 export interface ToolbarActionStyleProps {
   backgroundColor: string | null;
   foregroundColor: string | null;
-  fontSize: number | null;
+  fontSize: number | string | null;
   italic: boolean | null;
   bold: boolean | null;
   underline: boolean | null;
